--- a/pages/register/index.wxml
+++ b/pages/register/index.wxml
@@ -1,4 +1,5 @@
 <view>
+  <form  bindsubmit="formSubmit" bindreset="formReset">
     <view class='tipblock_msg'>
         <view class="tipblock_title">您需要填写认证信息</view>
         <view class="tipblock_title">用来
@@ -10,68 +11,79 @@
         <i-icon type="addressbook" size="24"/>
         <text class="icon_msg">车主信息</text>
     </view>
-    <!-- <i-panel class="cell-panel-demo">
-        <i-cell title="车主信息">
-            <i-icon size="24" type="addressbook" slot="icon"/>
-        </i-cell>
-    </i-panel> -->
+    <i-panel>
+        <view class="section picker_city">
+            <picker mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
+                <text class="textTitle">工作城市</text><text name="city">{{region[0]}}-{{region[1]}}-{{region[2]}}</text>
+            </picker>
+        </view>
+        <view class="input_margin">
+            <i-input value="{{ value2 }}" title="姓名" autofocus placeholder="请输入姓名" name="name" />
+        </view>
+        <view class="input_margin">
+            <i-input value="{{ value3 }}" type="idcard" autofocus title="身份证号" placeholder="请输入身份证号" name="IDnumber"/>
+        </view>
+        <view class="section picker_data">
+            <picker mode="date" value="{{driverDate}}" start="1979-09-01" end="2017-09-01" bindchange="binddriverDateChange">
+                <text class="textTitle">初次领驾照日期</text><text name="driverDate">{{driverDate}}</text>
+            </picker>
+        </view>
+    </i-panel>
+    </view>
+    <view>   
+    <view class="item_bc">
+        <i-icon type="createtask" size="24"/>
+        <text class="icon_msg">车辆信息</text>
+    </view>
     <i-panel>
         <view class="input_margin">
-            <i-input value="{{ value1 }}" title="工作城市" autofocus placeholder="请输入工作城市" />
+            <i-input value="{{ value4 }}" title="车牌号码" autofocus placeholder="请输入车牌号码" name="vehicleNumber" />
         </view>
         <view class="input_margin">
-            <i-input value="{{ value2 }}" title="姓名" autofocus placeholder="请输入姓名" />
+            <i-input value="{{ value5 }}" title="车辆品牌" autofocus placeholder="请输入车辆品牌" name="vehicleBrand" />
         </view>
         <view class="input_margin">
-            <i-input value="{{ value3 }}" type="number" title="身份证号" placeholder="请输入身份证号" />
-        </view>
-        <view class="section picker_margin">
-          <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-            <i-input class="picker" title="初次领驾照日期" value="{{date}}" placeholder="请输入初次领驾照日期" />
-          </picker>
-        </view>    
-    </i-panel>
-   </view>
-   <view>   
-
-      <!-- <i-panel>
-            <view class="item_bc">
-          <i-cell title="车辆信息">
-                <i-icon type="createtask" size="24" slot="icon"/>
-          </i-cell>
-        </view>
-      </i-panel> -->
-
-     <view class="item_bc">
-        <i-icon type="createtask" size="24"/>
-         <text class="icon_msg">车辆信息</text>
-     </view>
-      <i-panel>
-        <view class="input_margin">
-            <i-input value="{{ value4 }}" title="车牌号码" autofocus placeholder="请输入车牌号码" />
+            <i-input value="{{ value6 }}" title="车辆所有人" autofocus placeholder="请输入车辆所有人" name="vehicleOwner"/>
         </view>
         <view class="input_margin">
-            <i-input value="{{ value5 }}" title="车辆品牌" autofocus placeholder="请输入车辆品牌" />
+            <i-input value="{{ value7 }}" title="核定载人数" type="number" autofocus placeholder="请输入核定载人数" name="vechileApprovedPerson" />
         </view>
-        <view class="input_margin">
-            <i-input value="{{ value6 }}" title="车辆所有人" autofocus placeholder="请输入车辆所有人" />
-        </view>
-          <view class="section input_margin">
-            <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
-              <i-input class="picker" title="车辆注册日期" value="{{date}}" placeholder="请输入车辆注册日期" />
+        <view class="section picker_data">
+            <picker mode="date" value="{{vehicleRegisteDate}}" start="1979-09-01" end="2017-09-01" bindchange="bindvehicleRegisteDateChange">
+                <text class="textTitle">车辆注册日期</text><text name="driverDate">{{vehicleRegisteDate}}</text>
             </picker>
-          </view>   
-          <i-input value="{{ value7 }}" title="核定载人数" autofocus placeholder="请输入核定载人数" />
-      </i-panel>
+        </view> 
+    </i-panel>
     </view>
-    <view class='tipblock_pic'>
+    <view style="height:0.5rem"></view>
+    <view class='tipblock_picSecond '>
             <view class="tipblock_title">您需要上传证件照片</view>
             <view class="tipblock_title">用来
                 <text class="tipblock_title_important">实名认证</text>
             </view>
      </view> 
-    <image class='img' wx:if="{{!tempFilePaths[3]}}" bindtap='img_item' id='3' name='driver_license' src='../../images/driving_icense.png'></image>
-    <image class='img' wx:else bindtap='img_item' id='3' name='idcard_positive' src='{{tempFilePaths[3]}}'></image>
-    <image class='img img_top' wx:if="{{!tempFilePaths[4]}}" bindtap='img_item' id='4' name='driving_this' src='../../images/driver_license  .png'></image>
-    <image class='img img_top' wx:else bindtap='img_item' id='4' name='idcard_positive' src='{{tempFilePaths[4]}}'></image>
+     <view class="item_bc">
+            <i-icon type="businesscard" size="24" />
+            <text class="icon_msg">证件信息</text>
+        </view>
+     <view class="uploadPic">
+        <view>
+            <image class='img' wx:if="{{!tempFilePaths[0]}}" bindtap='img_item' id='0' name='driver_license' src='../../images/driving_01.png'></image>
+            <image class='img' wx:else bindtap='img_item' id='0' name='idcard_positive' src='{{tempFilePaths[0]}}'></image>
+        </view>  
+        <view>
+            <image class='img' wx:if="{{!tempFilePaths[1]}}" bindtap='img_item' id='1' name='driver_license' src='../../images/driving_02.png'></image>
+            <image class='img' wx:else bindtap='img_item' id='1' name='idcard_positive' src='{{tempFilePaths[1]}}'></image>
+        </view>
+        <view>
+            <image class='img' wx:if="{{!tempFilePaths[2]}}" bindtap='img_item' id='2' name='driving_this' src='../../images/driver_01.png'></image>
+            <image class='img' wx:else bindtap='img_item' id='2' name='idcard_positive' src='{{tempFilePaths[2]}}'></image>        
+        </view>
+        <view>
+            <image class='img' wx:if="{{!tempFilePaths[3]}}" bindtap='img_item' id='3' name='driving_this' src='../../images/driver_02.png'></image>
+            <image class='img' wx:else bindtap='img_item' id='3' name='idcard_positive' src='{{tempFilePaths[3]}}'></image>        
+        </view>
+    </view>
+    <button formType="submit" class="submitBtn" loading="true">确认提交</button>
+  </form>
 </view>
