首页轮播图

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,14 +1,16 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-  <canvas canvas-id="shareCanvas" style="width:600px;height:900px"></canvas>
-</view>
+<!-- <view class="container"> -->
+     <swiper style="height:500px;" indicator-dots="true" autoplay="true" interval="5000" duration="1000">
+
+      <!-- <block wx:for="{{background}}" wx:key="*this">
+          <swiper-item>
+            <view class="swiper-item {{item}}"></view>
+          </swiper-item>
+        </block> -->
+       <block wx:for="{{imgUrls}}" wx:for-item="slide" wx:key="id">
+        <swiper-item>
+           <image src="../../images/lunbo2.png" class="slide-image" width="355" height="150"/>
+        </swiper-item>
+      </block> 
+    </swiper>
+<!-- </view> -->
