--- a/pages/share/index.wxml
+++ b/pages/share/index.wxml
@@ -1,14 +1,11 @@
 <!--index.wxml-->
 <view class="container">
   <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber"> 获取手机号 </button>
+    <!-- <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber"> </button>  -->
   </view>
   <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view>
-  <canvas canvas-id="shareCanvas" style="width:600px;height:900px"></canvas>
+  <canvas canvas-id="shareCanvas" style="width:800px;height:900px"></canvas>
 </view>
