--- a/pages/share/index.wxss
+++ b/pages/share/index.wxss
@@ -1,19 +1,32 @@
 /**index.wxss**/
+
 .userinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 25rpx;
+  background: linear-gradient(to bottom, white 0%, white 100%);
 }
 
 .userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+  width: 150rpx;
+  height: 150rpx;
   border-radius: 50%;
+  margin-top: 20rpx;
+  margin-bottom: 25rpx;
+  box-shadow:0px 0px 12px gray;
 }
 
+
 .userinfo-nickname {
-  color: #aaa;
+  color: #272727;
+  font-size: 28rpx;
+  line-height: 40rpx;
+}
+
+.separate {
+  height: 18rpx;
+  background-color: #f2f2f2;
 }
 
 .usermotto {
