--- a/pages/share/index.wxml
+++ b/pages/share/index.wxml
@@ -1,22 +1,42 @@
 <!--index.wxml-->
-<view class="userinfo" style="height:180px;">
- <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" style="margin-top:46px;"  bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
- <block wx:else>
+<view class="userinfo" style="height:190px;">
     <image style="margin-top:46px;" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     <text class="userinfo-nickname">{{baye_rank ? baye_rank : ''}}</text>
-   </block>
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo"  bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
 </view>
 <view class="separate"></view>
-
 <view class="container">
-
-   <view class="userinfo">
-     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber"> 获取手机号 </button>
-  </view> 
-
+  <view class="caption-wrap">
+    <i-collapse name="{{name}}">
+        <i-collapse-item title="我的分享" name="name1">
+            <view slot="content">
+                分享的人数
+            </view>
+        </i-collapse-item>
+    </i-collapse>
+  </view>
+  <view class="separate"></view>
+  <i-button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" type="info">生成二维码</i-button>
+  <view class="b1" hidden="{{flag}}">
+      <view class="b2">
+        <canvas canvas-id="shareCanvas" style="width:100%;height:100%"></canvas>
+        <!-- <image src='../../images/ma.png'/> -->
+      </view>
+        <view class="t_w">
+          <text class="pop_text">已保存到相册</text>
+          <cover-view class="t_image" bindtap="closeMask" style="float: left">
+              <cover-image  src="../../images/qcm.png">
+              </cover-image>
+            </cover-view>
+          <text class="pop_text">可分享给好友</text>
+      </view>
+  </view>
+  <!-- <view class="userinfo">
+    <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber"> 获取手机号 </button>
+  </view>  -->
   <!-- <view class="usermotto">
     <text class="user-motto">{{motto}}</text>
   </view> -->
-  <canvas canvas-id="shareCanvas" style="width:800px;height:650px"></canvas>
+  <!-- <canvas canvas-id="shareCanvas" style="width:800px;height:650px"></canvas> -->
 </view>
