--- a/pages/share/index.wxml
+++ b/pages/share/index.wxml
@@ -5,31 +5,30 @@
     <text class="userinfo-nickname">{{baye_rank ? baye_rank : ''}}</text>
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo"  bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
 </view>
-<view class="separate"></view>
 <view class="container">
   <view class="caption-wrap">
     <i-collapse name="{{name}}">
-        <i-collapse-item title="我的分享" name="name1">
+        <i-collapse-item style="font-size: 32rpx;border-top:1px solid white;" title="我的分享" name="name1">
             <view slot="content">
-                分享的人数
+                分享的人数:{{shareNum}}
             </view>
         </i-collapse-item>
     </i-collapse>
   </view>
   <view class="separate"></view>
-  <i-button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" type="info">生成二维码</i-button>
+  <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" style="background-color:#35495e!important;color:white">生成二维码</button>
   <view class="b1" hidden="{{flag}}">
       <view class="b2">
         <canvas canvas-id="shareCanvas" style="width:100%;height:100%"></canvas>
         <!-- <image src='../../images/ma.png'/> -->
       </view>
         <view class="t_w">
-          <text class="pop_text">已保存到相册</text>
+          <text wx:if="{{shareTextflag}}" class="pop_text">已保存到相册</text>
           <cover-view class="t_image" bindtap="closeMask" style="float: left">
               <cover-image  src="../../images/qcm.png">
               </cover-image>
             </cover-view>
-          <text class="pop_text">可分享给好友</text>
+          <text wx:if="{{shareTextflag}}" class="pop_text">可分享给好友</text>
       </view>
   </view>
   <!-- <view class="userinfo">
